# app/Models/Konsultasi.php
@@ -1,0 +1,19 @@
+<?php
+
+namespace App\Models;
+
+use Illuminate\Database\Eloquent\Factories\HasFactory;
+use Illuminate\Database\Eloquent\Model;
+
+class Konsultasi extends Model
+{
+    use HasFactory;
+
+    protected $fillable = [
+        'pasien_id',
+        'dokter_id',
+        'tanggal_konsul',
+        'status',
+        'metode'
+    ];
+}
